tests/NormalTests/paczka1/small_fuzzy/67108844.err
Error in line 2: AJaW S684 58,4
Error in line 1: uKeRC0pRLa S42 43,6
Error in line 8: IuXOgMu1 S311 75,91
Error in line 7: IuXOgMu1 S684 87,4
Error in line 4: uKeRC0pRLa S311 20,5
